mysql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geektalk
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: geektalk
spec:
  type: ClusterIP  # https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
  selector:
    app: mysql-svc
  ports:
  - port: 3306 # service port
    targetPort: 3306   # container's port
    protocol: TCP
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: geektalk
spec:
  selector:
    matchLabels:
      app: mysql-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql-svc
    spec:
      containers:
      - name: mysql  # https://hub.docker.com/_/wordpress
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-volume
          hostPath:
            path: /data/mysql/
---
